--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -1,30 +1,68 @@
 imports:
-    - { resource: parameters.ini }
+    - { resource: parameters.yml }
     - { resource: security.yml }
 
 framework:
     #esi:             ~
-    #translator:      { fallback: %locale% }
+    translator:      { fallback: %locale% }
     secret:          %secret%
     charset:         UTF-8
     router:          { resource: "%kernel.root_dir%/config/routing.yml" }
     form:            true
     csrf_protection: true
-    validation:      { enable_annotations: true }
+    validation:      { enable_annotations: false }
     templating:      { engines: ['twig'] } #assets_version: SomeVersionScheme
+    default_locale:  %locale%
     session:
-        default_locale: %locale%
-        auto_start:     true
+        auto_start:      true
+        storage_id:      session.storage.pdo
+        name:            kurumi
+        gc_divisor:      108
+        gc_probability:  1
+        gc_maxlifetime:  7200   #gc_probability/gc_divisor chance of being run
+        cookie_lifetime: 3600
+        #cookie_path:     \
+        #cookie_domain:   example.com
+        #cookie_secure:   true
+        cookie_httponly: true
+
+parameters:
+    pdo.db_options:
+        db_table: session
+        db_id_col: session_id
+        db_data_col: session_value
+        db_time_col: session_time
+
+services:
+    pdo:
+        class: PDO
+        arguments:
+            dsn: "mysql:dbname=%database_name%"
+            user: %database_user%
+            password: %database_password%
+    session.storage.pdo:
+        class: Symfony\Component\HttpFoundation\Session\Storage\PdoSessionStorage
+        arguments: [@pdo, %pdo.db_options%, %session.storage.options%]
+    facebook_provider:
+        class: App\UserBundle\Security\User\Provider\FacebookProvider
+        arguments: [@fos_facebook.api, @doctrine.orm.entity_manager, @validator]
 
 # Twig Configuration
 twig:
     debug:            %kernel.debug%
     strict_variables: %kernel.debug%
+    form:
+        resources:
+            - '::fields.html.twig'
+    exception_controller:  Symfony\Bundle\TwigBundle\Controller\ExceptionController::showAction
+    globals:
+        site_name:  Kurumi
 
 # Assetic Configuration
 assetic:
     debug:          %kernel.debug%
     use_controller: false
+    bundles:        [ ]
     # java: /usr/bin/java
     filters:
         cssrewrite: ~
@@ -48,13 +86,82 @@ doctrine:
         auto_generate_proxy_classes: %kernel.debug%
         auto_mapping: true
 
+stof_doctrine_extensions:
+    default_locale: %locale%
+    orm:
+        default:
+            timestampable: true
+
 # Swiftmailer Configuration
 swiftmailer:
     transport: %mailer_transport%
     host:      %mailer_host%
     username:  %mailer_user%
     password:  %mailer_password%
+    spool:     { type: memory }
 
-jms_security_extra:
-    secure_controllers:  true
-    secure_all_services: false
+lunetics_locale:
+    # Sets the Languages which are allowed
+    allowed_languages:
+        - en
+        - sr
+
+    # Options for the Change Language Twig Extension
+    change_language:
+        # Show The Language in their native Language (e.g. Deutsch / English / Français )
+        # Default setting is set to false
+        show_foreign_languagenames: true
+
+        # Force Uppercase of the Languagenames
+        # Default setting is set to false
+        show_first_uppercase: true
+
+        # Adds an additional block / title ( Sprache ändern / Change Language / Changer la langue )
+        # Default setting is set to false
+        show_languagetitle: true
+
+    switch_router:
+
+        # Redirect to referrer after changing the language
+        # Default setting is set to true
+        use_referrer: true
+
+        # Redirect to a custom Route after changing the language.
+        # use_referrer must be set to false
+        redirect_to_route: "front"
+
+        # Redirect to a custom url after changing the language.
+        # use_refferer must be set to false and redirect_to_route not be set
+        redirect_to_url: "/"
+
+knp_zend_cache:
+    templates:
+        geoname:
+            frontend:
+                name: Core
+                options:
+                    lifetime: 7200
+                    automatic_serialization: true
+            backend:
+                name: Memcached
+                options:
+                    servers:
+                        host: 127.0.0.1
+                        port: 11211
+                        persistent: true
+                        weight: 1
+                        timeout: 1
+                        retry_interval: 15
+                        status: true
+                        failure_callback: null
+                    compression: false
+                    compatability: false
+
+fos_facebook:
+    file:   %kernel.root_dir%/../vendor/facebook/php-sdk/src/base_facebook.php
+    alias:  facebook
+    app_id: 326357144092347
+    secret: 4198e2354cde2ea66dd34aef1bbe5784
+    cookie: true
+    permissions: [email, user_birthday, user_location]
+
