--- a/app/phpunit.xml.dist
+++ b/app/phpunit.xml.dist
@@ -1,41 +1,42 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<!-- http://www.phpunit.de/manual/current/en/appendixes.configuration.html -->
-<phpunit
-    backupGlobals               = "false"
-    backupStaticAttributes      = "false"
-    colors                      = "true"
-    convertErrorsToExceptions   = "true"
-    convertNoticesToExceptions  = "true"
-    convertWarningsToExceptions = "true"
-    processIsolation            = "false"
-    stopOnFailure               = "false"
-    syntaxCheck                 = "false"
-    bootstrap                   = "bootstrap.php.cache" >
-
+<phpunit backupGlobals="false"
+         backupStaticAttributes="false"
+         colors="true"
+         convertErrorsToExceptions="true"
+         convertNoticesToExceptions="true"
+         convertWarningsToExceptions="true"
+         processIsolation="false"
+         stopOnFailure="false"
+         syntaxCheck="false"
+         bootstrap="autoload.php.dist"
+        >
     <testsuites>
-        <testsuite name="Project Test Suite">
-            <directory>../src/*/*Bundle/Tests</directory>
-            <directory>../src/*/Bundle/*Bundle/Tests</directory>
+        <testsuite name="Symfony Test Suite">
+            <directory>./src/Symfony/Bridge/*/Tests/</directory>
+            <directory>./src/Symfony/Component/*/Tests/</directory>
+            <directory>./src/Symfony/Bundle/*/Tests/</directory>
         </testsuite>
     </testsuites>
 
-    <!--
-    <php>
-        <server name="KERNEL_DIR" value="/path/to/your/app/" />
-    </php>
-    -->
+    <groups>
+        <exclude>
+            <group>benchmark</group>
+            <group>memcached</group>
+        </exclude>
+    </groups>
 
     <filter>
         <whitelist>
-            <directory>../src</directory>
+            <directory>./src/Symfony/</directory>
             <exclude>
-                <directory>../src/*/*Bundle/Resources</directory>
-                <directory>../src/*/*Bundle/Tests</directory>
-                <directory>../src/*/Bundle/*Bundle/Resources</directory>
-                <directory>../src/*/Bundle/*Bundle/Tests</directory>
+                <directory>./src/Symfony/Bridge/*/Tests</directory>
+                <directory>./src/Symfony/Component/*/Tests</directory>
+                <directory>./src/Symfony/Bundle/*/Tests</directory>
+                <directory>./src/Symfony/Bundle/*/Resources</directory>
+                <directory>./src/Symfony/Component/*/Resources</directory>
+                <directory>./src/Symfony/Component/*/*/Resources</directory>
             </exclude>
         </whitelist>
     </filter>
-
 </phpunit>
