Implemented BriareosNodejsBundle and BriareosChatBundle

--- a/app/config/config_dev.yml
+++ b/app/config/config_dev.yml
@@ -9,6 +9,12 @@ web_profiler:
     toolbar: false
     intercept_redirects: false
 
+web_profiler_extra:
+    routing:    true
+    container:  true
+    assetic:    true
+    twig:       true
+
 monolog:
     handlers:
         main:
