--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -23,8 +23,6 @@ security:
                 check_path: /login_check
                 login_path: /login
                 csrf_provider: form.csrf_provider
-                success_handler: ajax_authentication_handler
-                failure_handler: ajax_authentication_handler
             #fos_facebook:
             #    check_path: /facebook_check
             #    app_url: "http://apps.facebook.com/appName/"
@@ -32,7 +30,7 @@ security:
             logout:
                 path:           /logout
                 target:         /
-                #csrf_parameter: _csrf_token
+                csrf_parameter: token
                 csrf_provider:  form.csrf_provider
                 #intention: logout
                 handlers:       [fos_facebook.logout_handler]
@@ -46,11 +44,12 @@ security:
             #    realm: "Secured Demo Area"
 
     access_control:
-        - { path: ^/, roles: [IS_AUTHENTICATED_ANONYMOUSLY] }
-        - { path: ^/login, roles: [IS_AUTHENTICATED_ANONYMOUSLY] }
-        - { path: ^/login_check, roles: [IS_AUTHENTICATED_ANONYMOUSLY] }
+        - { path: ^/,               roles: [IS_AUTHENTICATED_ANONYMOUSLY] }
+        - { path: ^/login,          roles: [IS_AUTHENTICATED_ANONYMOUSLY] }
+        - { path: ^/login_check,    roles: [IS_AUTHENTICATED_ANONYMOUSLY] }
+        - { path: ^/logout,         roles: [IS_AUTHENTICATED_REMEMBERED] }
         - { path: ^/facebook_check, roles: [IS_AUTHENTICATED_ANONYMOUSLY] }
-        - { path: ^/admin/.*, roles: [ROLE_SUPER_ADMIN] }
+        - { path: ^/admin/.*,       roles: [ROLE_SUPER_ADMIN] }
         #- { path: ^/secured/.*, role: [IS_AUTHENTICATED_FULLY] } # This is the route secured with fos_facebook
         #- { path: ^/.*, role: [IS_AUTHENTICATED_ANONYMOUSLY] }
         #- { path: ^/login, roles: IS_AUTHENTICATED_ANONYMOUSLY, requires_channel: https }
