Started integration of BriareosAclBundle

--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -96,12 +96,14 @@ doctrine:
             ApplicationSonataMediaBundle: ~
             BriareosNodejsBundle: ~
             BriareosChatBundle: ~
+            BriareosAclBundle: ~
         dql:
             string_functions:
                 FindInSet: DoctrineExtensions\Query\Mysql\FindInSet
         resolve_target_entities:
             Briareos\NodejsBundle\Entity\NodejsSubjectInterface: App\UserBundle\Entity\User
             Briareos\ChatBundle\Entity\ChatSubjectInterface: App\UserBundle\Entity\User
+            Briareos\AclBundle\Entity\AclSubjectInterface: App\UserBundle\Entity\User
 
 stof_doctrine_extensions:
     default_locale: %locale%
