--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -34,7 +34,7 @@ twig:
     strict_variables: %kernel.debug%
     form:
         resources:
-            - "UserBundle::fields.html.twig"
+            - "::fields.html.twig"
             - "BriareosAclBundle::fields.html.twig"
     exception_controller:  Symfony\Bundle\TwigBundle\Controller\ExceptionController::showAction
     globals:
