--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -1,13 +1,3 @@
-BriareosNodejsBundle:
-    resource: "@BriareosNodejsBundle/Controller/"
-    type:     annotation
-    prefix:   /
-
-BriareosChatBundle:
-    resource: "@BriareosChatBundle/Controller/"
-    type:     annotation
-    prefix:   /
-
 front:
     pattern: /
 
@@ -21,21 +11,22 @@ UserBundle:
     type:     annotation
     prefix:   /
 
+BriareosNodejsBundle:
+    resource: "@BriareosNodejsBundle/Controller/"
+    type:     annotation
+    prefix:   /
+
+BriareosChatBundle:
+    resource: "@BriareosChatBundle/Controller/"
+    type:     annotation
+    prefix:   /
+
 LuneticsLocaleBundle:
     resource: "@LuneticsLocaleBundle/Resources/config/routing.yml"
     prefix:   /
 
-login_check:
-    pattern:  /login_check
-
-logout:
-    pattern:  /logout
-
-facebook_check:
-    pattern:  /facebook_check
-
 admin:
-    resource: '@SonataAdminBundle/Resources/config/routing/sonata_admin.xml'
+    resource: "@SonataAdminBundle/Resources/config/routing/sonata_admin.xml"
     prefix: /admin
 
 _sonata_admin:
@@ -44,9 +35,9 @@ _sonata_admin:
     prefix: /admin
 
 gallery:
-    resource: '@SonataMediaBundle/Resources/config/routing/gallery.xml'
+    resource: "@SonataMediaBundle/Resources/config/routing/gallery.xml"
     prefix: /media/gallery
 
 media:
-    resource: '@SonataMediaBundle/Resources/config/routing/media.xml'
+    resource: "@SonataMediaBundle/Resources/config/routing/media.xml"
     prefix: /media
